--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -5,7 +5,6 @@ html {
 
 body {
     font-family: "Poppins", sans-serif;
-    max-width: 1120px;
     margin: 0 auto;
 }
 
@@ -32,6 +31,7 @@ body {
     background-color: #9443d8;
     display: flex;
     min-width: calc(100vh - 125px);
+    height: 300px;
     align-items: center;
     gap: 50px;
     justify-content: space-around;
@@ -58,55 +58,6 @@ body {
     margin-bottom: 20px;
 }
 
-.postagens {
-    display: flex;
-    letter-spacing: 2px;
-    flex-direction: column;
-}
-
-.postagens .titulo-postagens{
-    background-color: #00EEA2;
-    color: #000;
-    text-align: center;
-    padding: 30px 0;
-    font-size: 30px;
-    font-weight: 500;
-    text-transform: uppercase;
-
-}
-
-.container-postagens {
-    background-color: #00EEA2;
-    display: flex;
-    justify-content: space-around;
-}
-
-.postagens-recentes{
-    background-color: #fff;
-    padding: 10px;
-    margin: 10px;
-    max-width: 650px;
-}
-
-.postagens-recentes .titulo-post {
-    text-align: end;
-    padding: 10px;
-    margin: 10px;
-}
-
-.postagens-recentes .data-post {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 10px;
-    margin: 10px;
-}
-
-.postagens-recentes .texto{
-    display: flex;
-    text-align: end;
-    padding: 10px;
-    margin: 10px;
-}
 
 .redes-sociais {
     background: #000;
@@ -134,20 +85,28 @@ body {
     transform: scale(1.1);
 }
 
-.contatos {
+#contato {
     display: flex;
     padding: 10px;
     margin: 10px;
 
 }
 
-.contatos a {
+.contato a {
     text-transform: uppercase;
     font-size: 20px;
+    border-radius: 30px;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    text-align: center;
+    transition: 0.5s;
 }
 
-.contatos a:hover {
+.contato a:hover {
     color: #9443d8;
+    border: 1px solid #9443d8;
+    transform: scale(1.1);
 }
 
 .home .container-foto .foto {
